--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -6,6 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
     cert-manager.io/cluster-issuer: 'lets-encrypt-test'
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
+    kubernetes.io/ingress.global-static-ip-name: web-ip
   labels:
     name: ingress
 spec:
