--- a/infra/k8s/cert-issuer.yaml
+++ b/infra/k8s/cert-issuer.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: lets-encrypt-test
+  name: lets-encrypt-staging
 spec:
   acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: 'bandziorgit@gmail.com'
     privateKeySecretRef:
-      name: lets-encrypt-test
+      name: lets-encrypt-staging
     solvers:
       - http01:
           ingress:
-            class: nginx
+            name: ingress-srv
