--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -44,7 +44,7 @@ jobs:
     # Authentication via credentials json
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0'
+      uses: google-github-actions/auth@v2
       with:
         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
