--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-srv
   annotations:
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    cert-manager.io/cluster-issuer: 'lets-encrypt-test'
+    cert-manager.io/cluster-issuer: 'lets-encrypt-staging'
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
     kubernetes.io/ingress.global-static-ip-name: web-ip
   labels:
@@ -13,7 +13,7 @@ spec:
   tls:
     - hosts:
         - site.balcerski.eu
-      secretName: site-balcerski-eu
+      secretName: web-ssl
   ingressClassName: nginx
   rules:
     - http:
