--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -14,16 +14,15 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ['master']
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: europe-central2-a # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: jubicular-cluster    # TODO: update to cluster name
-  GKE_ZONE: europe-central2-a    # TODO: update to cluster zone
+  GAR_LOCATION: europe-west4-a # TODO: update region of the Artifact Registry
+  GKE_CLUSTER: jubicular-cluster # TODO: update to cluster name
+  GKE_ZONE: europe-west4-a # TODO: update to cluster zone
   DEPLOYMENT_NAME: gke-jubicular-depl # TODO: update to deployment name
   REPOSITORY: bandzior # TODO: update to Artifact Registry docker repository
-  IMAGE: nginx
   SHA: $(git rev-parse HEAD)
 
 jobs:
@@ -37,50 +36,46 @@ jobs:
       id-token: 'write'
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-        
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    # Authentication via credentials json
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      # Authentication via credentials json
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-    - name: Set Project
-      uses: google-github-actions/setup-gcloud@v2
-      with:
-        project_id: ${{ env.PROJECT_ID }}
-        # Get the GKE credentials so we can deploy to the cluster
-        
-    - name: Set up GKE credentials
-      uses: google-github-actions/get-gke-credentials@v2
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
+      - name: Set Project
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+          # Get the GKE credentials so we can deploy to the cluster
 
+      - name: Set up GKE credentials
+        uses: google-github-actions/get-gke-credentials@v2
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
 
-    - name: Docker configuration
-      run: |-
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Configure Docker authentication for cloud
-      run: |-
-        gcloud --quiet auth configure-docker
-    
-    - name: Build Docker image
-      run: |-
-        docker build -t bandzior/site-k8s:latest -t bandzior/site-k8s:${{ env.SHA }} -f ./site/Dockerfile ./site
-    
-    - name: Push Docker image
-      run: |-
-        docker push bandzior/site-k8s:latest
+      - name: Docker configuration
+        run: |-
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-        docker push bandzior/site-k8s:${{ env.SHA }}
+      - name: Configure Docker authentication for cloud
+        run: |-
+          gcloud --quiet auth configure-docker
 
-    - name: Kubectl Apply
-      run: |-
-        kubectl apply -f infra/k8s
-    
+      - name: Build Docker image
+        run: |-
+          docker build -t bandzior/site-k8s:latest -t bandzior/site-k8s:${{ env.SHA }} -f ./site/Dockerfile ./site
 
+      - name: Push Docker image
+        run: |-
+          docker push bandzior/site-k8s:latest
+
+          docker push bandzior/site-k8s:${{ env.SHA }}
+
+      - name: Kubectl Apply
+        run: |-
+          kubectl apply -f infra/k8s
