--- a/infra/k8s/nginx-depl.yaml
+++ b/infra/k8s/nginx-depl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: websajt
 spec:
   selector:
     matchLabels:
@@ -37,10 +37,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-srv
+  name: websajt-srv
 spec:
   selector:
-    app: nginx
+    app: websajt
   ports:
     - port: 80
       targetPort: 80
