added cretificate yaml

--- a/infra/k8s/cert-staging.yaml
+++ b/infra/k8s/cert-staging.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: web-tls
+  name: web-ssl-staging
 spec:
   secretName: web-ssl-staging
   issuerRef:
