--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -15,7 +15,7 @@ spec:
   tls:
     - hosts:
         - site.balcerski.eu
-      secretName: web-ssl-staging
+      secretName: default/web-ssl-staging
   ingressClassName: nginx
   rules:
     - http:
