Revert "added default to secretName"
This reverts commit 8c1bb66adb44b83d80a2e1c99e48b62b583cd4e3.

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -15,7 +15,7 @@ spec:
   tls:
     - hosts:
         - site.balcerski.eu
-      secretName: default/web-ssl-staging
+      secretName: web-ssl-staging
   ingressClassName: nginx
   rules:
     - http:
