added host to ingress

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,7 +18,8 @@ spec:
       secretName: web-ssl-staging
   ingressClassName: nginx
   rules:
-    - http:
+    - host: site.balcerski.eu
+      http:
         paths:
           - pathType: Prefix
             path: /
