--- a/infra/k8s/cert-prod.yaml
+++ b/infra/k8s/cert-prod.yaml
@@ -7,6 +7,6 @@ spec:
   issuerRef:
     name: lets-encrypt-prod
     kind: ClusterIssuer
-  commonName: cert-prod
+  commonName: balcerski-eu
   dnsNames:
     - site.balcerski.eu
